# nerf

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  shell.nix
benches/: nerf.rs
examples/: background 2.rs  background.rs  button 2.rs  button.rs  column.rs  counter.rs  decoration 2.rs  menu 2.rs  menu.rs  padding 2.rs  padding.rs  row 2.rs  row_column 2.rs  scaffold.rs  sized_box 2.rs  sized_box.rs  softbuffer.rs  switching_button 2.rs  switching_button.rs  text.rs
src/: app.rs  drawing.rs  geometry 2.rs  geometry.rs  lib 2.rs  lib.rs  prelude 2.rs  prelude.rs  utils.rs  widget.rs
src/app/: app_context.rs  assets.rs  event.rs
src/app/assets/: text_assets.rs
src/app/event/: event_responses.rs  input_event.rs  mouse_position.rs  widget_event.rs
src/drawing/: canvas.rs  color.rs
src/drawing/canvas/: text.rs
src/geometry/: alignment.rs  decoration.rs  rect.rs  screen_side.rs  size_requirements.rs
src/utils/: nonable.rs  type_level_list.rs
src/widget/: align.rs  background.rs  button.rs  center.rs  column.rs  empty.rs  expanded.rs  padder.rs  row.rs  scaffold.rs  sized_box.rs
src/widget/default_widgets/: align.rs  background.rs  button.rs  center.rs  column.rs  empty.rs  expanded.rs  mod.rs  padder.rs  row.rs  scaffold.rs  sized_box.rs  stack.rs
src/widget/skia_widgets/: decorated_background.rs  mod.rs
src/widget/text_widgets/: mod.rs  text.rs  text_style.rs
src/widget/text_widgets/text/: text_overflow.rs
src/widget/text_widgets/text_style/: font_family.rs
