[package]
name = "nerf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
softbuffer = "0.3.0"
winit = "0.28.6"

[features]
skia = []
images = ["skia"]
svg = ["skia"]
text = ["skia"]

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "nerf"
harness = false
