[package]
name = "nerf"
version = "0.2.0"
edition = "2021"

[dependencies]
cosmic-text = { version = "0.9.0", optional = true }
softbuffer = "0.4.3"
tiny-skia = { version = "0.11.1", optional = true }
winit = "0.30.0"

[features]
default = ["skia", "text"]
skia = ["dep:tiny-skia"]
svg = ["skia"]
text = ["dep:cosmic-text"]
